search:query items mobile card markup

--- a/search.html
+++ b/search.html
@@ -81,6 +81,7 @@
     <!-- main products section -->
     <!-- search page query -->
     <div class="search-main">
+      <!-- left column -->
       <div>
         <div>
           <h3>Condition</h3>
@@ -97,180 +98,36 @@
               Dropdown button
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Piano</a>
+              <a class="dropdown  -item" href="#">Piano</a>
               <a class="dropdown-item" href="#">Violin</a>
               <a class="dropdown-item" href="#">Drums</a>
             </div>
           </div>
         </div>
       </div>
+      <!-- right column- search queries column -->
       <div class="search-queries">
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
+        <div>
+          <div class="query-item">
+            <div class="query-img-container">
+              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
+            </div>
             <div>
-              <button>+</button>
-              <button>5500$</button>
+              <h5>Piano</h5>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, rem ipsam! Quia quam earum voluptate
+                voluptatum obcaecati, tempore sed placeat adipisci corrupti dolorem totam in ea cum repudiandae ullam
+                inventore.</p>
             </div>
           </div>
         </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex">
-          <img src="./assets/piano-1.jpg" alt="">
-          <div>
-            <h4>Piano</h4>
-            <p>New</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
-              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
-              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
-            </p>
-            <p>From San fransisco</p>
-            <div>
-              <button>+</button>
-              <button>5500$</button>
-            </div>
-          </div>
-        </div>
+
       </div>
+    </div>
     </div>
 
   </main>
-  <footer class="container-fluid pt-3">
-    <div class="row row-cols-1 row-cols-md-3 justify-content-between">
+  <footer class="container-fluid pt-3 px-0">
+    <div class="row mx-0 row-cols-1 row-cols-md-3 justify-content-between">
       <!-- about the company -->
       <div class="text-light p-md-4 d-none d-md-block">
         <div class="text-center">
@@ -377,6 +234,7 @@
 
     </div>
   </footer>
+
 
   <!-- bootstrap js scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
