--- a/search.html
+++ b/search.html
@@ -112,11 +112,16 @@
             <div class="query-img-container">
               <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
             </div>
-            <div>
-              <h5>Piano</h5>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, rem ipsam! Quia quam earum voluptate
-                voluptatum obcaecati, tempore sed placeat adipisci corrupti dolorem totam in ea cum repudiandae ullam
-                inventore.</p>
+            <div class="query-text-container position-relative">
+              <h5 class="text-center m-3 font-weight-bold">Piano</h5>
+              <p>A simple yet sophisticated piano</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptatem dolor soluta asperiores
+                repudiandae at.</p>
+              <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing
+                consequuntur itaque blanditiis eos! </p>
+              <p>From India</p>
+              <span class="bg-danger rounded bg-red text-light px-4 op-9 position-absolute top right m-1 p-2">New</span>
+              <button class="btn w-100 btn-danger my-2">BUY</button>
             </div>
           </div>
         </div>
