query:container text margin and padding fix

--- a/search.html
+++ b/search.html
@@ -115,11 +115,12 @@
             <div class="query-text-container position-relative">
               <h5 class="text-center m-3 font-weight-bold">Piano</h5>
               <p>A simple yet sophisticated piano</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptatem dolor soluta asperiores
+              <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+                voluptatem dolor soluta asperiores
                 repudiandae at.</p>
-              <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing
+              <p class="d-none d-lg-block mb-0">Lorem ipsum dolor sit amet consectetur adipisicing
                 consequuntur itaque blanditiis eos! </p>
-              <p>From India</p>
+              <p class="mb-0">From India</p>
               <span class="bg-danger rounded bg-red text-light px-4 op-9 position-absolute top right m-1 p-2">New</span>
               <button class="btn w-100 btn-danger my-2">BUY</button>
             </div>
