--- a/search.html
+++ b/search.html
@@ -108,21 +108,25 @@
       <!-- right column- search queries column -->
       <div class="search-queries">
         <div>
-          <div class="query-item">
+          <div class="query-item m-3 br-red p-3">
             <div class="query-img-container">
               <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
             </div>
-            <div class="query-text-container position-relative">
-              <h5 class="text-center m-3 font-weight-bold">Piano</h5>
-              <p>A simple yet sophisticated piano</p>
-              <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-                voluptatem dolor soluta asperiores
-                repudiandae at.</p>
-              <p class="d-none d-lg-block mb-0">Lorem ipsum dolor sit amet consectetur adipisicing
-                consequuntur itaque blanditiis eos! </p>
-              <p class="mb-0">From India</p>
-              <span class="bg-danger rounded bg-red text-light px-4 op-9 position-absolute top right m-1 p-2">New</span>
-              <button class="btn w-100 btn-danger my-2">BUY</button>
+            <div class="query-text-container position-relative px-5">
+              <h5>Piano</h5>
+              <div>
+                <p class="m-0 font-weight-bold">850$</p>
+                <p>From India</p>
+              </div>
+              <div>
+                <a href="#">
+                  <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                    <path class="add-svg-path"
+                      d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                  </svg>
+                </a>
+                <button class="button mx-3 d-inline">Buy</button>
+              </div>
             </div>
           </div>
         </div>
