query:search query item and text-container background-colors fixed

--- a/search.html
+++ b/search.html
@@ -108,18 +108,18 @@
       <!-- right column- search queries column -->
       <div class="search-queries">
         <div>
-          <div class="query-item m-3 br-charcoal p-1 p-md-3">
+          <div class="query-item m-3 br-charcoal p-1 p-md-2 bg-query-item">
             <div class="query-img-container">
               <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
             </div>
-            <div class="query-text-container position-relative p-1 px-md-5">
+            <div class="query-text-container position-relative p-3 px-md-5 bg-query-text-container">
               <h5>Zattix Piano Model CX_100</h5>
               <div>
                 <p class="m-0 font-weight-bold">850$</p>
                 <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="mb-0 d-none d-md-block">A simple but sophisticated piano</p>
+                <p class="d-none d-md-block">A simple but sophisticated piano</p>
               </div>
-              <div class="add-svg-container d-flex justify-content-between">
+              <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
                 <a href="#">
                   <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                     <path class="add-svg-path"
