product:buy button issue fixed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </header>
   <main class="container-fluid p-0">
     <!-- top category info -->
-    <div class="jumbotron mt-5 p-3 p-lg-5 mb-0 text-center">
+    <div class="jumbotron mt-5 p-3 p-lg-3 mb-0 text-center">
       <h1 class="text-light">ZATTIX</h1>
       <p class="text-light">Buying and Selling could not be simpler than this</p>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center px-2 px-md-3 p-lg-0">
@@ -83,7 +83,7 @@
           <!-- slides for carousal start -->
 
           <!-- slide 1 -->
-          <div class="carousel-item active text-center p-lg-5">
+          <div class="carousel-item active text-center p-lg-3">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <div class="carousel-img">
@@ -109,7 +109,7 @@
           </div>
 
           <!-- slide 2 -->
-          <div class="carousel-item text-center p-lg-5">
+          <div class="carousel-item text-center p-lg-3">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
@@ -130,8 +130,8 @@
           </div>
 
           <!-- slide 3 -->
-          <div class="carousel-item text-center p-lg-5">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
+          <div class="carousel-item text-center p-lg-3">
+            <div class="row row-cols-1 row-cols-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
