buy:buy buttons removed from index home page

--- a/search.html
+++ b/search.html
@@ -82,9 +82,8 @@
     <!-- search page query -->
     <div class="search-main">
       <!-- left column -->
-      <div>
-        <div>
-          <h3>Condition</h3>
+      <div class="filter-section">
+        <!-- <div>
           <input type="checkbox" id="used" name="used" value="used">
           <label for="used"> Used</label>
           <input type="checkbox" id="new" name="new" value="new">
@@ -103,7 +102,7 @@
               <a class="dropdown-item" href="#">Drums</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <!-- right column- search queries column -->
       <div class="search-queries">
