container for lg screens

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid p-lg-5 bg-light product-section">
+    <section class="container-fluid container-lg p-lg-5 bg-light product-section">
       <div class="product-heading">
         <h2 class="font-weight-bold text-center border-bottom m-3">Piano</h2>
         <p class="font-weight-bold red">Grand, Upright, Electronic</p>
@@ -384,13 +384,9 @@
           <img src="./assets/logo.svg" alt="logo">
           <p class="font-weight-bolder mt-3">ZATTIX</p>
         </div>
-        <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores
-          nobis
-          voluptatum blanditiis ipsa
-          ut
-          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
+        <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, ibus perspiciatis iste itaque consequuntur, fugiat
           sed
-          vero nostrum at!</p>
+          vero nostrum at! ibus perspiciatis</p>
       </div>
 
       <!-- categories -->
