filter:filter options populated for ipad and desktop

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid container-lg p-lg-5 bg-light product-section">
+    <section class="container-fluid p-lg-5 bg-light product-section">
       <div class="product-heading">
         <h2 class="font-weight-bold text-center border-bottom m-3">Piano</h2>
         <p class="font-weight-bold red">Grand, Upright, Electronic</p>
