filter:padding for the filter section fix

--- a/search.html
+++ b/search.html
@@ -64,7 +64,6 @@
         </div>
       </div>
     </nav>
-    </div>
   </header>
   <main class="container-fluid p-0">
     <!-- top category info -->
@@ -80,7 +79,7 @@
 
     <!-- main products section -->
     <!-- search page query -->
-    <div class="search-main">
+    <div class="search-main container-lg">
       <!-- left column -->
       <div>
         <button class="w-100 button my-1 d-md-none" data-toggle="collapse" data-target="#filter-collapse"
@@ -113,49 +112,49 @@
           </div>
         </div>
         <!-- filter conditions for tablet and desktop -->
-        <div class="px-5 p-5 border m-3">
+        <div class="p-4 border m-3">
           <div class="filter-grid ">
-            <h4 class="red filter-heading">Condition</h4>
-            <div class="checkbox">
-              <input id="new" type="radio" value="New" name="condition">
-              <label class="" for="new">New</label>
-            </div>
-            <div class="checkbox">
-              <input id="used" type="radio" value="used" name="condition">
-              <label class="" for="used">Used</label>
-            </div>
+            <h5 class="red filter-heading">Condition</h4>
+              <div class="checkbox">
+                <input id="new" type="radio" value="New" name="condition">
+                <label class="" for="new">New</label>
+              </div>
+              <div class="checkbox">
+                <input id="used" type="radio" value="used" name="condition">
+                <label class="" for="used">Used</label>
+              </div>
 
           </div>
           <div class="filter-grid g-c-2 d-flex flex-column flex-nowrap">
-            <h4 class="red filter-heading">Company</h4>
-            <div class="checkbox">
-              <input id="check1" type="checkbox" value="New" name="condition">
-              <label class="" for="check1">Zattix</label>
-            </div>
-            <div class="checkbox">
-              <input id="check2" type="checkbox" value="used" name="condition">
-              <label class="" for="check2">Cassion</label>
-            </div>
-            <div>
-              <input id="check3" type="checkbox" value="used" name="condition">
-              <label class="" for="check3">Picasot</label>
-            </div>
+            <h5 class="red filter-heading">Company</h4>
+              <div class="checkbox">
+                <input id="check1" type="checkbox" value="New" name="condition">
+                <label class="" for="check1">Zattix</label>
+              </div>
+              <div class="checkbox">
+                <input id="check2" type="checkbox" value="used" name="condition">
+                <label class="" for="check2">Cassion</label>
+              </div>
+              <div>
+                <input id="check3" type="checkbox" value="used" name="condition">
+                <label class="" for="check3">Picasot</label>
+              </div>
 
           </div>
           <div class="filter-grid g-c-2 d-flex flex-column flex-nowrap">
-            <h4 class="red filter-heading">Category</h4>
-            <div class="checkbox">
-              <input id="check4" type="checkbox" value="New" name="condition">
-              <label class="mx-2" for="check4">Piano</label>
-            </div>
-            <div class="checkbox">
-              <input id="check5" type="checkbox" value="used" name="condition">
-              <label class=" mx-2" for="check5">Violin</label>
-            </div>
-            <div>
-              <input id="check6" type="checkbox" value="used" name="condition">
-              <label class=" mx-2" for="check6">Drums</label>
-            </div>
+            <h5 class="red filter-heading">Category</h4>
+              <div class="checkbox">
+                <input id="check4" type="checkbox" value="New" name="condition">
+                <label class="mx-2" for="check4">Piano</label>
+              </div>
+              <div class="checkbox">
+                <input id="check5" type="checkbox" value="used" name="condition">
+                <label class=" mx-2" for="check5">Violin</label>
+              </div>
+              <div>
+                <input id="check6" type="checkbox" value="used" name="condition">
+                <label class=" mx-2" for="check6">Drums</label>
+              </div>
 
           </div>
 
@@ -302,8 +301,6 @@
 
       </div>
     </div>
-    </div>
-
   </main>
   <footer class="container-fluid pt-3 px-0">
     <div class="row mx-0 row-cols-1 row-cols-md-3 justify-content-between">
