filter:mobile filter improved with flex using flex row

--- a/search.html
+++ b/search.html
@@ -90,91 +90,97 @@
         <div id="filter-collapse" class="collapse">
           <div>
             <h6 class="text-center font-weight-bold red m-1">CATEGORIES</h6>
-            <div class="checkbox">
-              <input id="m-check4" type="checkbox" value="New" name="condition">
-              <label class="mx-2" for="m-check4">Piano</label>
-            </div>
-            <div class="checkbox">
-              <input id="m-check5" type="checkbox" value="used" name="condition">
-              <label class=" mx-2" for="m-check5">Violin</label>
-            </div>
-            <div>
-              <input id="m-check6" type="checkbox" value="used" name="condition">
-              <label class=" mx-2" for="m-check6">Drums</label>
+            <div class="d-flex justify-content-between">
+              <div class="checkbox">
+                <input id="m-check4" type="checkbox" value="New" name="condition">
+                <label class="mx-2" for="m-check4">Piano</label>
+              </div>
+              <div class="checkbox">
+                <input id="m-check5" type="checkbox" value="used" name="condition">
+                <label class=" mx-2" for="m-check5">Violin</label>
+              </div>
+              <div>
+                <input id="m-check6" type="checkbox" value="used" name="condition">
+                <label class=" mx-2" for="m-check6">Drums</label>
+              </div>
             </div>
 
           </div>
           <div>
             <h6 class="text-center font-weight-bold red m-1">COMPANY</h6>
-            <div class="checkbox">
-              <input id="m-check1" type="checkbox" value="New" name="condition">
-              <label class="" for="m-check1">Zattix</label>
-            </div>
-            <div class="checkbox">
-              <input id="m-check2" type="checkbox" value="used" name="condition">
-              <label class="" for="m-check2">Cassion</label>
-            </div>
-            <div>
-              <input id="m-check3" type="checkbox" value="used" name="condition">
-              <label class="" for="m-check3">Picasot</label>
+            <div class="d-flex justify-content-between">
+              <div class="checkbox">
+                <input id="m-check1" type="checkbox" value="New" name="condition">
+                <label class="" for="m-check1">Zattix</label>
+              </div>
+              <div class="checkbox">
+                <input id="m-check2" type="checkbox" value="used" name="condition">
+                <label class="" for="m-check2">Cassion</label>
+              </div>
+              <div>
+                <input id="m-check3" type="checkbox" value="used" name="condition">
+                <label class="" for="m-check3">Picasot</label>
+              </div>
             </div>
           </div>
           <div>
             <h6 class="text-center font-weight-bold red m-1">CONDITION</h6>
-            <div class="checkbox">
-              <input id="m-new" type="radio" value="New" name="condition">
-              <label class="" for="m-new">New</label>
-            </div>
-            <div class="checkbox">
-              <input id="m-used" type="radio" value="used" name="condition">
-              <label class="" for="m-used">Used</label>
+            <div class="d-flex justify-content-around">
+              <div class="checkbox">
+                <input id="m-new" type="radio" value="New" name="condition">
+                <label class="" for="m-new">New</label>
+              </div>
+              <div class="checkbox">
+                <input id="m-used" type="radio" value="used" name="condition">
+                <label class="" for="m-used">Used</label>
+              </div>
             </div>
           </div>
         </div>
         <!-- filter conditions for tablet and desktop -->
         <div class="p-4 border m-3 d-none d-md-block">
           <div class="filter-grid ">
-            <h5 class="red filter-heading">Condition</h4>
-              <div class="checkbox">
-                <input id="new" type="radio" value="New" name="condition">
-                <label class="" for="new">New</label>
-              </div>
-              <div class="checkbox">
-                <input id="used" type="radio" value="used" name="condition">
-                <label class="" for="used">Used</label>
-              </div>
+            <h5 class="red filter-heading">Condition</h5>
+            <div class="checkbox">
+              <input id="new" type="radio" value="New" name="condition">
+              <label class="" for="new">New</label>
+            </div>
+            <div class="checkbox">
+              <input id="used" type="radio" value="used" name="condition">
+              <label class="" for="used">Used</label>
+            </div>
 
           </div>
           <div class="filter-grid g-c-2 d-flex flex-column flex-nowrap">
-            <h5 class="red filter-heading">Company</h4>
-              <div class="checkbox">
-                <input id="check1" type="checkbox" value="New" name="condition">
-                <label class="" for="check1">Zattix</label>
-              </div>
-              <div class="checkbox">
-                <input id="check2" type="checkbox" value="used" name="condition">
-                <label class="" for="check2">Cassion</label>
-              </div>
-              <div>
-                <input id="check3" type="checkbox" value="used" name="condition">
-                <label class="" for="check3">Picasot</label>
-              </div>
+            <h5 class="red filter-heading">Company</h5>
+            <div class="checkbox">
+              <input id="check1" type="checkbox" value="New" name="condition">
+              <label class="" for="check1">Zattix</label>
+            </div>
+            <div class="checkbox">
+              <input id="check2" type="checkbox" value="used" name="condition">
+              <label class="" for="check2">Cassion</label>
+            </div>
+            <div>
+              <input id="check3" type="checkbox" value="used" name="condition">
+              <label class="" for="check3">Picasot</label>
+            </div>
 
           </div>
           <div class="filter-grid g-c-2 d-flex flex-column flex-nowrap">
-            <h5 class="red filter-heading">Category</h4>
-              <div class="checkbox">
-                <input id="check4" type="checkbox" value="New" name="condition">
-                <label class="mx-2" for="check4">Piano</label>
-              </div>
-              <div class="checkbox">
-                <input id="check5" type="checkbox" value="used" name="condition">
-                <label class=" mx-2" for="check5">Violin</label>
-              </div>
-              <div>
-                <input id="check6" type="checkbox" value="used" name="condition">
-                <label class=" mx-2" for="check6">Drums</label>
-              </div>
+            <h5 class="red filter-heading">Category</h5>
+            <div class="checkbox">
+              <input id="check4" type="checkbox" value="New" name="condition">
+              <label class="mx-2" for="check4">Piano</label>
+            </div>
+            <div class="checkbox">
+              <input id="check5" type="checkbox" value="used" name="condition">
+              <label class=" mx-2" for="check5">Violin</label>
+            </div>
+            <div>
+              <input id="check6" type="checkbox" value="used" name="condition">
+              <label class=" mx-2" for="check6">Drums</label>
+            </div>
 
           </div>
 
